--- a/wercker.yml
+++ b/wercker.yml
@@ -17,12 +17,28 @@ build:
         checkpoint: pkgs
         packages: openssh-client pkg-config libsystemd-dev
 
+    - script:
+        name: install govendor
+        code: go get -u github.com/kardianos/govendor
+    
+    - script:
+        name: install dependencies
+        code: govendor sync
+
+    - script:
+        name: go vet
+        code: govendor vet +local
+
     # - golint:
     #     exclude: vendor
 
     - script:
         name: go test
-        code: go test ./... -v
+        code: govendor test -v +local
+
+    - script:
+        name: clear out the build binaries
+        code: rm -rf $GOPATH/pkg
 
     - script:
         name: compile linux_amd64
